# System_Spoofer

./: .clang-format  CMakeLists.txt  README.md
Src/: main.cpp  pch.h
Src/Registry/: Registry.cpp  Registry.h  RegistryManager.cpp  RegistryManager.h  RegistryValue.cpp  RegistryValue.h
Src/Spoof/: Spoof.cpp  Spoof.h
Src/Util/: Logger.hpp  Randomizer.cpp  Randomizer.h  Util.cpp  Util.h
